# m65_vim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.c64  Makefile.m65  Makefile.ubuntu  README.md  TODO.txt  config.prop  globals.h  run.sh  todo.txt
.run/: Ubuntu.run.xml
cmake/: CMakeLists.txt
doc/: code_format.txt  commands.txt  kernal.txt  missing.txt  styleguide.md  todo.txt
src/: TAGS  buffer.c  buffer.h  cmd.c  cmd.h  editMode.h  editor.c  editor.h  line.c  line.h  render.c  render.h  state.h  test.c  ui_strings.h  vim.c
src/core/: cmd.c  cmd.h  debug.c  debug.h  editMode.h  editor.c  editor.h  globals.h  itostr.c  itostr.h  keycodes.h  line.c  line.h  platform.h  render.c  render.h  state.h  ui_strings.h  undo.c  undo.h  vim.c
src/core/lib/: itostr.c  keycodes.c  keycodes.h  snprintf.c  snprintf.h
src/lib/: itoa.c  itoa.h  itostr.c  itostr.h
src/lib/m65/: debug.h  itostr_test_suite.cpp  itostr_test_suite2.cpp  kbd.c  kbd.h  kernal.c  kernal.h  screen.c  screen.h  txtio.c  txtio.h
src/platform/: platform.h
src/platform/c64/: platform_c64.c  platform_c64.h  screen.c  screen.h
src/platform/cbm/: cbm_defs.h  kernal.c  kernal.h  kernal_calypsi.s
src/platform/mega65/: kbd.h  kernal.h  platform_mega65.c  platform_mega65.h  screen.c  screen.h
src/platform/ubuntu/: platform_ubuntu.c  platform_ubuntu.h
test/: LineAllocationAndInsertionTests.c  LineAllocationAndInsertionTests.h  LineMemoryManagement.cpp  LineTestSuite.h  ScreenDrawingWithStatusUpdates.cpp  itostr_extended_test_suite.c  itostr_test_suite.c  testRunner.c
